# amanita-controller

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  prj.conf
boards/: stm32_min_dev_black.overlay
src/: Pid.c  hbridge.c  hbridge.h  main.c  qdenc.c  qdenc.h
